chore(spacing): fix button spacing

--- a/app/scss/elements/_section.scss
+++ b/app/scss/elements/_section.scss
@@ -246,7 +246,7 @@
 .section__button--post-photo,
 .section__button--reset {
   @include ease-out;
-  transform: translate3d(0, 350%, 0);
+  transform: translate3d(0, 500%, 0);
   transition-delay: 5.53s;
 
   [data-view-active] > & {
